# wood_cut_calc

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  check_schema.py  custom_filters.py  docker-compose.yml  init_db.py  package-lock.json  package.json  puppeteer_demo.md  pyproject.toml  run_migrations.py  schema.sql  setup.py  test_joining.py  test_joining_fix.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
backups/: .gitkeep
docs/: Look at the contents of the bunnings_web.md  STANDARDS.md  Wildcard-Aware-Cutting-Plan-Generator.md  bunnings_search_analysis.md  bunnings_website_search_api.md  gap_analysis.md  prompts_orig.md
exports/: cuts.csv  inventory.csv  projects.csv  saved_plans.csv  suppliers.csv
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
migrations/: __init__.py  migrate_add_per_cut_joining.py  migrate_add_quality.py  migrate_add_quality_to_cuts.py  migrate_add_shipping_cost.py  migrate_add_timber_joining.py  migrate_quality_to_relation.py  migrate_rename_task_to_product_name.py  migration_manager.py
static/: manifest.json
templates/: base.html  cut_form.html  cutting_plan.html  index.html  inventory_form.html  project_form.html  project_view.html  projects.html  qualities.html  quality_form.html  species.html  species_form.html  supplier_form.html  supplier_view.html  suppliers.html
wood_cut_calc/: This is better but still not perfect.md  __init__.py  __main__.py  cutting_algorithms.py  routes.py  svg_generator.py
(+2 files in other folders)
