[tool.poetry]
name = "wood-cut-calc"
version = "0.1.0"
description = "An application to optimize woodworking cutting plans"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
werkzeug = "^2.2.3"
jinja2 = "^3.1.2"
markupsafe = "^2.1.2"
itsdangerous = "^2.1.2"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88