[tool.poetry]
name = "wood-cut-calc"
version = "0.1.0"
description = "An application to optimize woodworking cutting plans"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
werkzeug = "^3.1.3"
jinja2 = "^3.1.6"
markupsafe = "^3.0.2"
itsdangerous = "^2.2.0"
click = "^8.1.8"
json5 = "^0.9.14"
anthropic = "^0.49.0"
fastapi = "^0.115.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88